# anime-grubber

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: publish.yml  rust.yml
src/: agent.rs  builder.rs  error.rs  gen_enum.rs  gen_url.rs  lib.rs
src/agents/: faulfi.rs  macros.rs  mod.rs  vailfu.rs  vailfupics.rs  waifu_pics.rs
tests/: main.rs  test_default_enum.rs  waifu_pics_macro.rs
