[package]
name = "anime-grubber"
version = "0.0.1"
edition = "2021"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
description = "A convenient library for extracting images of cute characters from websites."
license = "MIT"
repository = "https://github.com/TOwInOK/anime-grubber"
homepage = "https://github.com/TOwInOK/anime-grubber"
documentation = "https://docs.rs/anime-grubber"
readme = "README.md"
keywords = ["anime", "image", "gif", "fetch"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait = "0.1.83"
miniserde = "0.1.40"
reqwest = "0.12.8"
thiserror = "1.0.64"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
panic = "unwind"
